@@ -1,3 +1,7 @@
+2002-04-14  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* configure.in: Check for off_t, size_t, and ssize_t.
+
 2002-04-07  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime-utils.c (g_mime_utils_uuencode_close): Fixed a bug that
